--- a/deployment/database/aurora/aurora-global-standby-cluster.yml
+++ b/deployment/database/aurora/aurora-global-standby-cluster.yml
@@ -19,11 +19,12 @@ Parameters:
     Description: Enter the environment suffix for the resources
   MachineType:
     # global databases support either db.r4 or db.r5
-    Default: db.r5.large
+    Default: db.serverless
     Type: String
     AllowedValues:
       - db.r4.large
       - db.r5.large
+      - db.serverless
   DatabaseName:
     Default: globalDatabase
     Type: String
@@ -33,16 +34,6 @@ Parameters:
     AllowedValues:
       - 'Yes'
       - 'No'
-  MySqlVersion:
-    Default: '5.7'
-    Type: String
-    AllowedValues:
-      - '5.7'
-  MySqlEngineMode:
-    Default: 'provisioned'
-    Type: String
-    AllowedValues:
-      - 'provisioned'
   ClusterName:
     Default: dbcluster-02
     Type: String
@@ -57,6 +48,8 @@ Parameters:
     Type: String
     Description: Enter the Standby Region
     Default: "us-west-2"
+  DBSecretArn:
+    Type: String
 Resources:
   AuroraMySqlComputeSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -72,11 +65,28 @@ Resources:
       Type: String
       Name: !Sub '${NamingPrefix}-aurora-mysql-sg-${AWS::Region}${Env}'
       Value: !GetAtt AuroraMySqlComputeSecurityGroup.GroupId
+  # DBStorageEncryptionKMSKey:
+  #   Type: 'AWS::KMS::ReplicaKey'
+  #   Properties:
+  #     PrimaryKeyArn: !Sub '{{resolve:secretsmanager:${NamingPrefix}-${GlobalClusterIdentifier}-StorageEncryptionKeyArn${Env}}}'
+  #     Description: Multi-Region Aurora Storage Encryption Key
+  #     PendingWindowInDays: 10
+  #     KeyPolicy:
+  #       Version: 2012-10-17
+  #       Id: key-default-1
+  #       Statement:
+  #         - Sid: Enable IAM User Permissions
+  #           Effect: Allow
+  #           Principal:
+  #             AWS: !Sub 'arn:aws:iam::${AWS::AccountId}:root'
+  #           Action: 'kms:*'
+  #           Resource: '*'
   DBStorageEncryptionKMSKey:
-    Type: 'AWS::KMS::ReplicaKey'
+    Type: 'AWS::KMS::Key'
     Properties:
-      PrimaryKeyArn: !Sub '{{resolve:secretsmanager:${NamingPrefix}-${GlobalClusterIdentifier}-StorageEncryptionKeyArn${Env}}}'
       Description: Multi-Region Aurora Storage Encryption Key
+      MultiRegion: true
+      EnableKeyRotation: true
       PendingWindowInDays: 10
       KeyPolicy:
         Version: 2012-10-17
@@ -88,37 +98,32 @@ Resources:
               AWS: !Sub 'arn:aws:iam::${AWS::AccountId}:root'
             Action: 'kms:*'
             Resource: '*'
-  DBClusterParameterGroup:
-    Type: AWS::RDS::DBClusterParameterGroup
+  DBHostSecret:
+    Type: 'AWS::SSM::Parameter'
     Properties:
-      Family: !FindInMap
-        - EngineMap
-        - !Ref MySqlVersion
-        - family
-      Parameters:
-        max_connections: 300
-      Description: DB Cluster Parameter Group
-  DBParameterGroup:
-    Type: AWS::RDS::DBParameterGroup
+      Type: String
+      Name: !Sub '${NamingPrefix}-${GlobalClusterIdentifier}-Hostname${Env}'
+      Description: "Secret that has the RDS-generated hostname for the database"
+      Value: !Sub "${DBCluster.Endpoint.Address}:${DBCluster.Endpoint.Port}"
+  DBCredentialSecretArn:
+    Type: 'AWS::SSM::Parameter'
     Properties:
-      Family: !FindInMap
-        - EngineMap
-        - !Ref MySqlVersion
-        - family
-      Parameters:
-        max_connections: 300
-      Description: DB Instance Parameter Group
+      Type: String
+      Name: !Sub '${NamingPrefix}-${GlobalClusterIdentifier}-CredentialSecretArn${Env}'
+      Description: !Sub 'The arn of the ${NamingPrefix} Secret'
+      Value: !Ref DBSecretArn
   DBCluster:
     DependsOn:
-      - DBClusterParameterGroup
       - SubnetGroup
     Type: AWS::RDS::DBCluster
     Properties:
+      ServerlessV2ScalingConfiguration:
+        MinCapacity: 1
+        MaxCapacity: 8
       AutoMinorVersionUpgrade: true
       BackupRetentionPeriod: 7
       CopyTagsToSnapshot: true
       DBClusterIdentifier: !Sub '${NamingPrefix}-${ClusterName}-${AWS::Region}${Env}'
-      DBClusterParameterGroupName: !Ref DBClusterParameterGroup
       DBSubnetGroupName: !Ref SubnetGroup
       DeletionProtection: false
       EnableCloudwatchLogsExports:
@@ -128,10 +133,8 @@ Resources:
         - slowquery
       EnableIAMDatabaseAuthentication: true
       Engine: aurora-mysql
-      EngineVersion: !Ref MySqlVersion
-      EngineMode: !Ref MySqlEngineMode
       GlobalClusterIdentifier: !Sub '${NamingPrefix}-${GlobalClusterIdentifier}${Env}'
-      KmsKeyId: 'mrk-aa976fa137b340d08fedaa7149728814'
+      KmsKeyId: !Ref DBStorageEncryptionKMSKey
       Port: '3306'
       StorageEncrypted: true
       VpcSecurityGroupIds:
@@ -141,7 +144,6 @@ Resources:
           Value: !Ref NamingPrefix
   DBInstance1:
     DependsOn:
-      - DBParameterGroup
       - DBCluster
       - SubnetGroup
     Type: AWS::RDS::DBInstance
@@ -152,18 +154,15 @@ Resources:
         - !Ref MinorVersionUpgrade
         - value
       DBClusterIdentifier: !Ref DBCluster
-      DBInstanceIdentifier: !Sub '${ClusterName}-1'
+      DBInstanceIdentifier: !Sub '${NamingPrefix}-${ClusterName}${Env}-1'
       DBInstanceClass: !Ref MachineType
-      DBParameterGroupName: !Ref DBParameterGroup
       DBSubnetGroupName: !Ref SubnetGroup
       Engine: aurora-mysql
-      EngineVersion: !Ref MySqlVersion
       PubliclyAccessible: false
-      MonitoringRoleArn: !Sub '{{resolve:secretsmanager:${NamingPrefix}-${GlobalClusterIdentifier}-MonitoringIAMRoleArn${Env}}}'
+      MonitoringRoleArn: !Sub '{{resolve:secretsmanager:mr-app/${NamingPrefix}-${GlobalClusterIdentifier}-MonitoringIAMRoleArn${Env}}}'
       MonitoringInterval: 1
   DBInstance2:
     DependsOn:
-      - DBParameterGroup
       - DBCluster
       - SubnetGroup
     Type: AWS::RDS::DBInstance
@@ -174,14 +173,12 @@ Resources:
         - !Ref MinorVersionUpgrade
         - value
       DBClusterIdentifier: !Ref DBCluster
-      DBInstanceIdentifier: !Sub '${ClusterName}-2'
+      DBInstanceIdentifier: !Sub '${NamingPrefix}-${ClusterName}${Env}-2'
       DBInstanceClass: !Ref MachineType
-      DBParameterGroupName: !Ref DBParameterGroup
       DBSubnetGroupName: !Ref SubnetGroup
       Engine: aurora-mysql
-      EngineVersion: !Ref MySqlVersion
       PubliclyAccessible: false
-      MonitoringRoleArn: !Sub '{{resolve:secretsmanager:${NamingPrefix}-${GlobalClusterIdentifier}-MonitoringIAMRoleArn${Env}}}'
+      MonitoringRoleArn: !Sub '{{resolve:secretsmanager:mr-app/${NamingPrefix}-${GlobalClusterIdentifier}-MonitoringIAMRoleArn${Env}}}'
       MonitoringInterval: 1
   SubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
@@ -220,9 +217,10 @@ Resources:
           PolicyName: root
     Type: "AWS::IAM::Role"
   CustomBackedLambda:
+    DependsOn: DBCluster
     Type: AWS::Lambda::Function
     Properties:
-      FunctionName: !Sub EnableWriteForwardingForDBCluster${Env}
+      FunctionName: !Sub ${NamingPrefix}-EnableWriteForwardingForDBCluster${Env}
       Runtime: python3.10
       Role: !GetAtt LambdaExecutionRole.Arn
       Handler: index.lambda_handler
